--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
                     <i class="fa-solid fa-volume-high volume-on"></i>
                     <i class="fa-solid fa-volume-xmark volume-off"></i>
                 </div>
-                <input type="range" name="volume" id="volume" min="0" max="100" step="1">
+                <!-- <div class="progress-volume-wrap"> -->
+                <input type="range" name="volume" id="volume" class="volume" min="0" max="100" step="1">
+                <!-- <div class="progress-bar-volume">
+
+                    </div>
+                </div> -->
             </div>
 
             <div class="progress-container">
@@ -66,7 +71,7 @@
                     <span>00:00</span>
                 </div>
                 <div class="progress-wrap">
-                    <input id="progress" class="progress" type="range" step="1" min="0" max="100">
+                    <input id="progress" class="progress" type="range" value="0" step="0.4" min="0" max="100">
                     <div class="button-progress"></div>
                     <div class="progress-bar"></div>
                 </div>
